---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: ????
  Info:
    - Update icon
    - Draft abandon mechanic
    - Prototype abandon mechanic
    - Debug abandoned purger
    - Roboport itself emits nothing
    - Print whitelisted tiles at world load
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025. 05. 27
  Info:
    - Cleanup network creation and deletion
    - Upgrade to surfacedata
    - Remove flib dependency
    - Move bounding box expander into its own function
    - React to tile removal events
    - Replace table_first with next
    - Keep the visualisation on permanently for now
    - Shrink to 3x3 tiles so the center is obvious
    - Fix some instances where tile roboports got orphaned
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025. 05. 22
  Info:
    - Clear up warnings
    - Touch up the localization and yeet the mothballs
    - Touch up the control stage
    - Write #mod-dev-showcase post
    - Restrict to player played tiles
    - Have roboports register a network struct always
    - Fix crash when placing concrete under two unconnected roboports
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2024. 11. 15
  Info:
    - Ported to 2.0
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2023. 06. 08
  Info:
    - Prevent a blinking network
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2023. 06. 07
  Info:
    - Track adding and removing roboports seperately
    - Destroy tiles when the last roboport gets removed
    - Set unknown as debug sprite
    - Goto continue
    - Move network destroyer into its own function