@@ -1,6 +1,6 @@
 [entity-name]
 concrete-roboport=Concrete roboport
-concrete-roboport-tile=Concrete roboport tile
+concrete-roboport--tile=Concrete roboport tile
 
 [technology-name]
 concrete-roboport=Concrete roboport
